# DCT2net

./: README.md  dct-dct2net_denoiser.py  dct2net_denoiser.py  setup.cfg  trainer.py
denoised_images/: dct-dct2net_sigma25_lena.tif
models/: dct_denoiser.py  model_testing.py  model_training.py
saved_models/: dct2net.p
